# BMVC-FADE

./: LICENSE  README.md  pyproject.toml
datasets/: base.py  mvtec.py  utils.py  visa.py
evaluation/: metrics.py  utils.py
prompts/: chatgpt3.5_prompt1.json  chatgpt3.5_prompt2.json  chatgpt3.5_prompt3.json  chatgpt3.5_prompt4.json  chatgpt3.5_prompt5.json  manual_prompt.json  manual_prompt_with_classname.json  manual_prompt_with_classname2.json  manual_prompt_without_classname.json  winclip_prompt.json  winclip_prompt_aug_position.json  winclip_prompt_aug_size.json  winclip_prompt_aug_size_position.json
scripts/: run_fade.py
utils/: anomaly_detection.py  embeddings.py  image_model.py  plots.py  text_model.py  winclip_prompts.py
